feat: add debug launch task

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,15 @@
             "mode": "auto",
             "program": "main.go",
             "args": ["./example/spec.yaml", "./out/spec.yaml"]
+        },
+        {
+            "name": "cybersource-pnr",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "main.go",
+            "args": ["../cybersource-bofa-adapter/specs/cybersource-ctp-pnr.3.0.1.yaml", "../cybersource-bofa-adapter/specs/cybersource-ctp-pnr.3.0.1.extracted.yaml"]
         }
+        
     ]
 }
